# dotfiles

./: .gitignore  .gitmodules  LICENSE  README.md
bash/: .bashrc  click.oga  kitty-custom.conf
bash_kittyterm/: .bashrc  .profile  kitty-custom.conf  toprc  xdg-base-setup.sh
containers/: Containerfile.zeal  firefox-containter.sh
git/: .gitconfig
gpg/: gpg-agent.conf  gpg-connect-agent.exe.lnk  gpg.conf
jetbrains/: catalog.xml  clion.diff  clion.window.layouts.xml  idea.window.layouts.xml  idea.windows.layout.json  ideolog-AndroidEventLog.xml  pycharm.diff  pycharm.window.layouts.xml  rustrover.diff  tmp.xml  webstorm.window.layouts.xml
kwrite/: kwriterc
linux_pkgs/: 1password-agent.toml  Containerfile.zeal  _expressvpn-upgrade.py  apps.sh  colocat.py  devtools.sh  evolution-mail-reader.ui  expressvpn-upgrade  expressvpn-upgrade.py  expressvpn-upgrade.sh  fastfetch.config.jsonc  fedora-fractal.xcf  fedora.sh  fractal.plymouth  hyfetch.json  idea-window-layouts.toml  keyd-base.conf  plymouth-gen.sh  signal-appimage.desktop  ttyfont.sh  zeal_setup.sh
linux_pkgs/localrepos/crates/multiviewer_repo/: Cargo.toml
linux_pkgs/localrepos/crates/multiviewer_repo/src/: lib.rs  main.rs
linux_pkgs/localrepos/crates/multiviewer_repo/tests/: test_repo_update.rs
linux_pkgs/localrepos/crates/multiviewer_repo/tests/resources/existing_repo/repodata/: 355b4b5cbdbfd53ad38c3a6afaf87dc0128f56607d0accda0dd79c02a588d3d3-other.xml.zst  6ff549aac11f21136e6c67e3023c9136371d0f60d6c57a63a263424a9e98b9bd-filelists.xml.zst  b6f88607447b9ac7b0bb76882c4d978152207c0c1163217581dce5f209f6dafd-primary.xml.zst  repomd.xml
linux_pkgs/localrepos/crates/multiviewer_repo/tests/rpm_xml_schemes/: mod.rs  primary.rs  repomd.rs
powerline_cfg/: config.json
powershell/: Microsoft.PowerShell_profile.ps1
qalculate/: envs_sh-retention.xml
rust/: Cargo.template.toml  config.toml  rustfmt.toml
scripts/: colocat  colodiff.py  config_yubikey.sh  git-unsync  git-unsync.py  pgpcard-reload  qalc  wfly-pr.py  ynab-csv  ynab-csv.py
scripts/gpg_op_passphrase/: Cargo.toml
scripts/gpg_op_passphrase/src/: main.rs
scripts/upvad/: CHANGELOG.md  Cargo.toml
scripts/upvad/src/: main.rs
ssh/: allowed_signers  authorized_keys  config
systemd/: blackd.service  cargo-update-chk.service  cargo-whatfeatures-chk.service  handlr-regex.service  howdy-auth.service  librepods.service  local_updchk@.timer  pastel-chk.service  poetry-chk.service  rbenv-chk.service  rustup-chk.service  (+3 more)
(+53 files in other folders)
