[package]
name = "gpg_op_passphrase"
version = "0.1.1"
authors = ["Jessica Rodriguez <dev@jessicarod.com>"]
description = "A funky GPG wrapper to save me some time with entering my passphrase for Git commands, securely"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.216", features = ["derive"] }
tempfile = "3.13.0"
toml = "0.8.19"
