[package]
name = "upvad"
version = "0.2.1"
edition = "2021"
description = "A quick script to upgrade Mullvad VPN on RPM-based distros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
hyper = { version = "0.14.25", features = ["client", "http2", "tcp"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
itertools = "0.10.5"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["rt", "macros"] }
versions = "4.1.0"
